--- a/docs_site/package.json
+++ b/docs_site/package.json
@@ -22,8 +22,10 @@
     "@docusaurus/preset-classic": "2.0.0-beta.13",
     "@docusaurus/theme-live-codeblock": "^2.0.0-beta.14",
     "@mdx-js/react": "^1.6.21",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "d3-graphviz": "^4.1.1",
     "lodash": "^4.17.21",
     "plugin-image-zoom": "github:ataft/plugin-image-zoom",
     "prism-react-renderer": "^1.2.1",
