--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@babel/plugin-proposal-optional-chaining": "^7.10.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-export-default-from": "^7.10.1",
+    "@babel/plugin-transform-destructuring": "^7.18.0",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/plugin-transform-parameters": "^7.17.12",
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
     "@msgpack/msgpack": "^2.7.1",
