preparing to move things around

--- a/dbux-code/.gitignore
+++ b/dbux-code/.gitignore
@@ -1,7 +1,12 @@
 dist
 dbux_projects
+
+
+# dev/external/research stuff
+/links/
 _analysis
 test/__data
+
 
 # Logs
 logs
@@ -9,7 +14,6 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-public
 
 # Runtime data
 pids
