--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lerna": "^4",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
+    "npm-which": "^3.0.1",
     "object.fromentries": "^2.0.2",
     "open": "^7.1.0",
     "open-cli": "^6.0.0",
