WIP: working toward new release

--- a/package.json
+++ b/package.json
@@ -73,14 +73,15 @@
     "prepublishOnly": "yarn run build:prod",
     "i": "npx lerna bootstrap --force-local && npx lerna link --force-local",
     "start": "yarn run build:clean && yarn run version:dev && yarn runall:dev",
+    "start:prod": "yarn run build:clean && yarn run version:prod && yarn runall:prod",
     "pub": "node scripts/publish.js",
     "marketplace": "node scripts/publish.js marketplace",
     "marketplace:minor": "node scripts/publish.js marketplace minor",
     "nra": "node node_modules/npm-run-all/bin/npm-run-all",
     "runall:dev": "npm run nra -- -p watch graph:watch",
+    "runall:prod": "npm run nra -- -p watch:prod graph:watch:prod",
     "_runall:dev": "(yarn watch) & (graph:watch)",
     "registry-files": "node --stack-trace-limit=1000 scripts/auto-write-files.js",
-    "start:prod": "yarn run build:clean && npm run nra -- -p watch:prod graph:watch:prod",
     "version:dev": "node --unhandled-rejections=strict -e \"require('./scripts/fix-versions').revertToDevVersion().then(() => process.exit(0))\"",
     "version:dev:next": "node --unhandled-rejections=strict -e \"require('./scripts/fix-versions').nextDevVersion().then(() => process.exit(0))\"",
     "version:prod": "node --unhandled-rejections=strict -e \"require('./scripts/fix-versions').downgradeProdVersion().then(() => process.exit(0))\"",
