getting ready for new vesion

--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "i": "npx lerna bootstrap --force-local && npx lerna link --force-local",
     "start": "yarn run build:clean && yarn run version:dev && yarn runall:dev",
     "start:prod": "yarn run build:clean && yarn run version:prod && yarn runall:prod",
-    "pub": "node scripts/publish.js",
+    "pub": "node scripts/publish.js -- n",
     "marketplace": "node scripts/publish.js marketplace",
     "marketplace:minor": "node scripts/publish.js marketplace minor",
     "nra": "node node_modules/npm-run-all/bin/npm-run-all",
@@ -100,6 +100,7 @@
     "graph:build:prod": "cd dbux-graph-client && yarn run build:prod",
     "code:install-only": "cd dbux-code && yarn run reinstallself",
     "code:install": "cd dbux-code && yarn run package-no-build && yarn run reinstallself",
+    "code:copy": "node scripts/copy-prod-build.js",
     "code:build+pkg+install:prod": "yarn run build:prod && yarn run code:pkg+install",
     "code:build+pkg+install:dev": "yarn run build:dev && yarn run code:pkg+install",
     "code:uninstall": "cd dbux-code && yarn run uninstallself",
