--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "i": "npx lerna bootstrap --force-local && npx lerna link --force-local",
     "start": "yarn run build:clean && yarn run version:dev && yarn runall:dev",
     "start:prod": "yarn run build:clean && yarn run version:prod && yarn runall:prod",
-    "pub": "node scripts/publish.js -- n",
+    "pub": "node scripts/publish.js n",
     "marketplace": "node scripts/publish.js marketplace",
     "marketplace:minor": "node scripts/publish.js marketplace minor",
     "nra": "node node_modules/npm-run-all/bin/npm-run-all",
