--- a/panzoom/package.json
+++ b/panzoom/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dbux/panzoom",
   "private": true,
-  "version": "0.7.6",
+  "version": "0.7.7-dev.1",
   "description": "Extensible, mobile friendly pan and zoom framework (supports DOM and SVG).",
   "main": "index.js",
   "scripts": {
