--- a/dbux-projects/package.json
+++ b/dbux-projects/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@dbux/projects",
-  "version": "0.7.7-dev.1",
+  "version": "0.7.7",
   "description": "",
   "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@dbux/cli": "^0.7.7-dev.1",
-    "@dbux/common": "^0.7.7-dev.1",
-    "@dbux/common-node": "^0.7.7-dev.1",
-    "@dbux/data": "^0.7.7-dev.1",
+    "@dbux/cli": "^0.7.7",
+    "@dbux/common": "^0.7.7",
+    "@dbux/common-node": "^0.7.7",
+    "@dbux/data": "^0.7.7",
     "cross-spawn": "^7.0.3",
     "firestore-rest-serdes": "^1.0.3",
     "glob": "^7.1.6",
