--- a/dbux-common/package.json
+++ b/dbux-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dbux/common",
-  "version": "0.7.7",
+  "version": "0.7.8-dev.0",
   "description": "",
   "module": "src/index.js",
   "main": "src/index.js",
