--- a/dbux-runtime/package.json
+++ b/dbux-runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dbux/runtime",
-  "version": "0.7.7",
+  "version": "0.7.8-dev.0",
   "description": "",
   "module": "dist/index-node.js",
   "main": "dist/index-node.js",
@@ -21,7 +21,7 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.10.2",
-    "@dbux/common": "^0.7.7",
+    "@dbux/common": "^0.7.8-dev.0",
     "core-js": "^3.15",
     "i18next": "^19.8.2",
     "lodash": "^4.17.21",
