--- a/dbux-cli/package.json
+++ b/dbux-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dbux/cli",
-  "version": "0.7.8",
+  "version": "0.7.9-dev.0",
   "description": "",
   "scripts": {
     "start": "npm run build:watch",
@@ -26,11 +26,11 @@
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
     "@babel/runtime": "^7.10.1",
-    "@dbux/babel-plugin": "^0.7.8",
-    "@dbux/babel-register-fork": "^0.7.8",
-    "@dbux/common": "^0.7.8",
-    "@dbux/common-node": "^0.7.8",
-    "@dbux/runtime": "^0.7.8",
+    "@dbux/babel-plugin": "^0.7.9-dev.0",
+    "@dbux/babel-register-fork": "^0.7.9-dev.0",
+    "@dbux/common": "^0.7.9-dev.0",
+    "@dbux/common-node": "^0.7.9-dev.0",
+    "@dbux/runtime": "^0.7.9-dev.0",
     "colors": "1.4.0",
     "glob": "^7.1.6",
     "i18next": "^19.8.2",
