--- a/dbux-server/package.json
+++ b/dbux-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dbux/server",
   "private": true,
-  "version": "0.7.8",
+  "version": "0.7.9-dev.0",
   "license": "Apache-2.0",
   "scripts": {
     "clean": "rm -rf ./dist",
