Dusting things off, fixing dependency issues

--- a/package.json
+++ b/package.json
@@ -30,12 +30,11 @@
     "css-loader": "^3.4.2",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-import-resolver-webpack": "^0.13.1",
     "eslint-plugin-import": "^2",
     "file-loader": "^6.0.0",
     "http-server": "^0.12.1",
     "lerna": "^4",
-    "nodemon": "^2.0.2",
+    "env-cmd nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "npm-which": "^3.0.1",
     "object.fromentries": "^2.0.2",
@@ -59,6 +58,7 @@
     "@babel/runtime": "^7.13.17",
     "core-js": "^3.15",
     "cross-spawn": "^7.0.3",
+    "env-cmd": "^10.1.0",
     "find-package-json": "^1.2.0",
     "lodash": "^4.17.21",
     "prettier": "^2.6.2",
@@ -72,25 +72,25 @@
   },
   "scripts": {
     "prepublishOnly": "yarn run build:prod",
-    "i": "npx lerna bootstrap --force-local && npx lerna link --force-local",
+    "i": "yarn install",
     "start": "yarn run build:clean && yarn run version:dev && yarn runall:dev",
     "start:prod": "yarn run build:clean && yarn runall:prod",
-    "pub": "node scripts/publish.js n",
-    "marketplace": "node scripts/publish.js marketplace",
-    "marketplace:minor": "node scripts/publish.js marketplace minor",
-    "nra": "node node_modules/npm-run-all/bin/npm-run-all",
+    "pub": "env-cmd node scripts/publish.js n",
+    "marketplace": "env-cmd node scripts/publish.js marketplace",
+    "marketplace:minor": "env-cmd node scripts/publish.js marketplace minor",
+    "nra": "env-cmd node node_modules/npm-run-all/bin/npm-run-all",
     "runall:dev": "npm run nra -- -p watch graph:watch",
     "runall:prod": "npm run nra -- -p watch:prod graph:watch:prod",
     "_runall:dev": "(yarn watch) & (graph:watch)",
-    "registry-files": "node --stack-trace-limit=1000 scripts/auto-write-files.js",
-    "version:dev": "node --unhandled-rejections=strict -e \"require('./scripts/fix-versions').revertToDevVersion().then(() => process.exit(0))\"",
-    "version:dev:next": "node --unhandled-rejections=strict -e \"require('./scripts/fix-versions').nextDevVersion().then(() => process.exit(0))\"",
-    "version:prod": "node --unhandled-rejections=strict -e \"require('./scripts/fix-versions').downgradeProdVersion().then(() => process.exit(0))\"",
+    "registry-files": "env-cmd node --stack-trace-limit=1000 scripts/auto-write-files.js",
+    "version:dev": "env-cmd node --unhandled-rejections=strict -e \"require('./scripts/fix-versions').revertToDevVersion().then(() => process.exit(0))\"",
+    "version:dev:next": "env-cmd node --unhandled-rejections=strict -e \"require('./scripts/fix-versions').nextDevVersion().then(() => process.exit(0))\"",
+    "version:prod": "env-cmd node --unhandled-rejections=strict -e \"require('./scripts/fix-versions').downgradeProdVersion().then(() => process.exit(0))\"",
     "version:dev:bump": "npx lerna version prerelease --preid=dev --force-publish -y",
     "build:clean": "bash scripts/dbux-run-all.sh \"rm -rf dist\" && cd dbux-code && yarn run build:clean",
-    "____trace:dep": "node --trace-deprecation --stack-trace-limit=1000 ...",
+    "____trace:dep": "env-cmd node --trace-deprecation --stack-trace-limit=1000 ...",
     "watch": "yarn run version:dev && node --trace-deprecation --stack-trace-limit=1000 -- ./node_modules/webpack/bin/webpack.js watch --mode development",
-    "watch:prod": "node --stack-trace-limit=1000 -- ./node_modules/webpack/bin/webpack.js watch --mode production",
+    "watch:prod": "env-cmd node --stack-trace-limit=1000 -- ./node_modules/webpack/bin/webpack.js watch --mode production",
     "build:dev": "yarn run version:dev && yarn run build:clean && yarn run graph:build:dev && node --stack-trace-limit=1000 -- ./node_modules/webpack/bin/webpack.js --mode development",
     "build:prod": "yarn run build:clean && yarn run graph:build:prod && node --stack-trace-limit=1000 -- ./node_modules/webpack/bin/webpack.js build --mode production",
     "update-dbux-code-docs": "cd dbux-code && yarn update-docs",
@@ -101,7 +101,7 @@
     "graph:build:prod": "cd dbux-graph-client && yarn run build:prod",
     "code:install-only": "cd dbux-code && yarn run reinstallself",
     "code:install": "cd dbux-code && yarn run package-no-build && yarn run reinstallself",
-    "code:copy": "node scripts/copy-prod-build.js",
+    "code:copy": "env-cmd node scripts/copy-prod-build.js",
     "code:build+pkg+install:prod": "yarn run build:prod && yarn run code:pkg+install",
     "code:build+pkg+install:dev": "yarn run build:dev && yarn run code:pkg+install",
     "code:uninstall": "cd dbux-code && yarn run uninstallself",
@@ -128,7 +128,7 @@
     "eslint:files:open": "code $(npx eslint \"dbux-**/src/**/*.js\" | grep -E \"^(\\w|/).*\\.js\")",
     "server:run": "cd dbux-server && yarn run start:run",
     "fix-shell:windows": "npm config set script-shell \"C:\\Program Files\\git\\bin\\bash.exe\"",
-    "zzfixme__code:analyze": "node --trace-deprecation ./node_modules/webpack/bin/webpack --mode production --profile --json > dist/stats.json && npx webpack-bundle-analyzer dist/stats.json",
+    "zzfixme__code:analyze": "env-cmd node --trace-deprecation ./node_modules/webpack/bin/webpack --mode production --profile --json > dist/stats.json && npx webpack-bundle-analyzer dist/stats.json",
     "zzold_dbux-install": "yarn install && bash scripts/dbux-run-all.sh \"yarn install\"",
     "zzold_dbux-install-force": "yarn install --force",
     "zzold_p1-install": "bash ./assets/projects/todomvc-vanilla-es6/install.sh",
@@ -142,7 +142,7 @@
     "shapez-install": "git clone https://github.com/tobspr/shapez.io.git && cd shapez.io && git lfs pull && yarn && cd gulp && yarn && yarn gulp && echo TODO: also install git-lfs + ffmpeg, see: https://github.com/tobspr/shapez.io/tree/master/.travis.yml"
   },
   "volta": {
-    "node": "16.13.1",
+    "node": "18.18.2",
     "yarn": "1.22.17"
   }
 }
