--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/plugin-transform-parameters": "^7.17.12",
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/plugin-transform-typescript": "^7.20.0",
+    "@babel/plugin-proposal-class-properties": "^7",
     "@babel/preset-env": "^7.10.1",
     "@msgpack/msgpack": "^2.7.1",
     "babel-loader": "^8.2.2",
@@ -34,7 +35,7 @@
     "file-loader": "^6.0.0",
     "http-server": "^0.12.1",
     "lerna": "^4",
-    "env-cmd nodemon": "^2.0.2",
+    "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "npm-which": "^3.0.1",
     "object.fromentries": "^2.0.2",
